--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin:0;padding:0;width:100vW;height:100vH;">
 
-<script src="./load.js"></script>
+<script src="./macOSNotif.js"></script>
 <script>macOSNotifJS()</script>
 </body>
 </html>
