move all styling to a css file, begin swipe to dismiss

--- a/macOSNotif.html
+++ b/macOSNotif.html
@@ -1,126 +1,12 @@
-<div id="macOSNotifJS_Outer" style="
-    width: 430px;
-    height: 92px;
-    position: fixed;
-    right: 0;
-    top: 5px;
-    padding: 10px 0;
-    overflow: hidden;
-    z-index: 9999;
-">
-    <div id="macOSNotifJS_Container" style="
-        width: 400px;
-        height: 72px;
-        position: absolute;
-        right: -400px;
-        top: 10px;
-        opacity: 0.1;
-        background: rgba(255, 255, 255, 0.98);
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
-        border: none;
-        transition: all .8s ease-in-out;
-    ">
-        <div style="
-            float: left;
-            width: 300px;
-            padding: 10px;
-            border: none;
-            border-right: 1px rgba(0, 0, 0, 0.5) solid;
-        ">
-            <h3 style="
-                display: block;
-                padding: 5px;
-                margin: 0;
-                font-size: 16px;
-                line-height: 16px;
-                color: #000;
-                max-width: 100%;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-                vertical-align: baseline;
-                text-shadow: none;
-                border: none;
-                font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-                font-weight: 600;
-            " id="macOSNotifJS_ContainerTitle"></h3>
-            <h4 style="
-                display: block;
-                padding: 5px;
-                margin: 0;
-                font-size: 16px;
-                line-height: 16px;
-                color: #000;
-                max-width: 100%;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-                vertical-align: baseline;
-                text-shadow: none;
-                border: none;
-                font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-                font-weight: 300;
-            " id="macOSNotifJS_ContainerSubTitle"></h4>
+<div id="macOSNotifJS_Outer" class="macOSNotif_Outer">
+    <div id="macOSNotifJS_Container" class="macOSNotif_Container">
+        <div id="macOSNotifJS_Text" class="macOSNotif_Text">
+            <h3 class="macOSNotif_Title" id="macOSNotifJS_Title"></h3>
+            <h4 class="macOSNotif_Title macOSNotif_Subtitle" id="macOSNotifJS_Subtitle"></h4>
         </div>
-        <div style="
-            float: right;
-            /*          Outer - Padd - Inner - Padd - Bord */
-            width: calc(400px - 10px - 300px - 10px - 1px);
-            height: 100%;
-            min-height: 100%;
-            padding: 0;
-            border: none;
-        ">
-            <a href="#" onclick="
-                let elm = this.parentElement.parentElement;
-                elm.style.right = '-400px';
-                elm.style.opacity = '0.1';
-                if(window.macOSNotifJS_AutoDismiss) clearTimeout(window.macOSNotifJS_AutoDismiss);
-                setTimeout(function(){elm.remove()},800);
-            " style="
-                display: block;
-                text-align: center;
-                padding: 5px 10px;
-                margin: 0;
-                text-decoration: none;
-                color: #000;
-                line-height: calc((72px - 10px - 10px) / 2 - 1px);
-                border: none;
-                border-top: 1px transparent solid;
-                max-width: 100%;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-                text-shadow: none;
-                font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-                font-weight: 300;
-            " id="macOSNotifJS_ContainerClose"></a>
-            <a href="#" onclick="
-                event.preventDefault();
-                let me = this;
-                let elm = me.parentElement.parentElement;
-                elm.style.right = '-400px';
-                elm.style.opacity = '0.1';
-                setTimeout(function(){window.location.href = me.href},800);
-            " style="
-                display: block;
-                text-align: center;
-                padding: 5px 10px;
-                margin: 0;
-                text-decoration: none;
-                color: #000;
-                line-height: calc((72px - 10px - 10px) / 2 - 1px);
-                border: none;
-                border-top: 1px rgba(0, 0, 0, 0.5) solid;
-                max-width: 100%;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-                text-shadow: none;
-                font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-                font-weight: 300;
-            " id="macOSNotifJS_ContainerGo"></a>
+        <div id="macOSNotifJS_Buttons" class="macOSNotif_Buttons">
+            <a onclick="macOSNotifJS_Button1(this)" class="macOSNotif_Button" id="macOSNotifJS_Button1"></a>
+            <a onclick="macOSNotifJS_Button2(this)" class="macOSNotif_Button" id="macOSNotifJS_Button2"></a>
         </div>
     </div>
 </div>
