swipe to dismiss

--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
 </head>
-<body style="margin:0;padding:0;width:100vW;height:100vH;">
-
-<script src="./macOSNotif.js"></script>
-<script>macOSNotifJS()</script>
+<body style="margin:0;padding:0;width:100vW;height:100vH;background:#666">
+    <button onclick="macOSNotifJS()">Trigger Notification</button>
+    <script src="./macOSNotif.js"></script>
+    <script>macOSNotifJS()</script>
 </body>
 </html>
