--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
 </head>
-<body style="margin:0;padding:0;width:100vW;height:100vH;background:#666">
+<body style="margin:0;padding:0;width:100vW;height:100vH;background:#666;text-align:center;">
 
-<button onclick="macOSNotifJS()">Trigger Notification</button>
+<button style="font-size:4em;margin-top:4em" onclick="macOSNotifJS()">Trigger Notification</button>
 <script src="./macOSNotif.js"></script>
 <script>macOSNotifJS()</script>
 
