use apple system font, san francisco

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
 </head>
-<body style="margin:0;padding:0;width:100vW;height:100vH;background:#666;text-align:center;">
+<body style="margin:0;padding:0;width:100vW;height:100vH;background:#666;color:#ddd;text-align:center;">
 
+<h1>A simple Javascript plugin to create simulated macOS notifications on your website.</h1>
 <button style="font-size:4em;margin-top:4em" onclick="macOSNotifJS()">Trigger Notification</button>
 <script src="./macOSNotif.js"></script>
 <script>macOSNotifJS()</script>
