--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="margin:0;padding:0;background:#666;color:#ddd;text-align:center;font-family:sans-serif">
 <head>
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
 </head>
-<body style="margin:0;padding:0;width:100vW;height:100vH;background:#666;color:#ddd;text-align:center;">
+<body style="margin:0;padding:0;background:transparent">
 
 <h1>A simple Javascript plugin to create simulated macOS notifications on your website.</h1>
 <button style="font-size:4em;margin-top:4em" onclick="macOSNotifJS()">Trigger Notification</button>
