--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" style="margin:0;padding:0;background:#666;color:#ddd;text-align:center;font-family:sans-serif">
+<html lang="en" style="margin:0;padding:0;background:#666;color:#ddd;text-align:center">
 <head>
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
+    <link href="res/macOSNotif.fonts.css" rel="stylesheet" type="text/css"/>
 </head>
-<body style="margin:0;padding:0;background:transparent">
+<body class="sf-ui-display" style="margin:0;padding:0;background:transparent">
 
-<h1>A simple Javascript plugin to create simulated macOS notifications on your website.</h1>
-<button style="font-size:4em;margin-top:4em" onclick="macOSNotifJS()">Trigger Notification</button>
+<h1 style="margin-top:4em">A simple Javascript plugin to create simulated macOS notifications on your website.</h1>
+<button style="font-size:2.5em;margin-top:1em" onclick="macOSNotifJS()">Trigger Notification</button>
 <script src="./macOSNotif.js"></script>
 <script>macOSNotifJS()</script>
 
