--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <body class="sf-ui-display" style="margin:0;padding:0;background:transparent">
 
 <h1 style="margin-top:4em">A simple Javascript plugin to create simulated macOS notifications on your website.</h1>
-<button style="font-size:2.5em;margin-top:1em" onclick="macOSNotifJS()">Trigger Notification</button>
+<button style="font-size:2.5em;margin-top:1em" onclick="macOSNotif()">Trigger Notification</button>
 <script src="./macOSNotif.js"></script>
-<script>macOSNotifJS()</script>
+<script>macOSNotif()</script>
 
 </body>
 </html>
