add single button type (issue #2) + make main text linkable

--- a/res/macOSNotif.html
+++ b/res/macOSNotif.html
@@ -18,10 +18,10 @@
 
 <div id="macOSNotifJS_Outer" class="macOSNotif_Outer">
     <div id="macOSNotifJS_Container" class="macOSNotif_Container">
-        <div id="macOSNotifJS_Text" class="macOSNotif_Text">
+        <a onclick="macOSNotifJS_ButtonMain(this)" id="macOSNotifJS_Text" class="macOSNotif_Text">
             <h3 class="macOSNotif_Title" id="macOSNotifJS_Title"></h3>
             <h4 class="macOSNotif_Title macOSNotif_Subtitle" id="macOSNotifJS_Subtitle"></h4>
-        </div>
+        </a>
         <div id="macOSNotifJS_Buttons" class="macOSNotif_Buttons">
             <a onclick="macOSNotifJS_Button1(this)" class="macOSNotif_Button" id="macOSNotifJS_Button1"></a>
             <a onclick="macOSNotifJS_Button2(this)" class="macOSNotif_Button" id="macOSNotifJS_Button2"></a>
