--- a/index.html
+++ b/index.html
@@ -25,8 +25,24 @@
 </head>
 <body class="sf-ui-display" style="margin:0;padding:0;background:transparent">
 
-<h1 style="margin-top:4em">A simple Javascript plugin to create simulated macOS notifications on your website.</h1>
-<button style="font-size:2.5em;margin-top:1em" onclick="macOSNotif()">Trigger Notification</button>
+<h1 style="margin-top:4em;margin-bottom:2em">
+    A simple Javascript plugin to create simulated macOS notifications on your website.
+</h1>
+
+<div style="font-size:2em;">
+    <button style="font-size:1em;" onclick="macOSNotif()">
+        Trigger Notification (Two buttons)</button>
+    <br/><code>macOSNotif()</code><br/><br/>
+
+    <button style="font-size:1em;" onclick="macOSNotif({btn2Text:null})">
+        Trigger Notification (One button)</button>
+    <br/><code>macOSNotif({btn2Text:null})</code><br/><br/>
+
+    <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#'})">
+        Trigger Notification (Main body clickable)</button>
+    <br/><code>macOSNotif({mainLink:'#'})</code><br/><br/>
+</div>
+
 <script src="./macOSNotif.js"></script>
 <script>macOSNotif()</script>
 
