support no buttons (issue #1)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#'})">
         Trigger Notification (Main body clickable)</button>
     <br/><code>macOSNotif({mainLink:'#'})</code><br/><br/>
+
+    <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#', btn1Text:null})">
+        Trigger Notification (No buttons)</button>
+    <br/><code>macOSNotif({mainLink:'#', btn1Text:null})</code><br/><br/>
 </div>
 
 <script src="./macOSNotif.js"></script>
