--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
 
 <div style="font-size:2em;">
     <button style="font-size:1em;" onclick="macOSNotif()">
-        Trigger Notification (Two buttons)</button>
+        Trigger Notification (Two buttons)
+    </button>
     <br/><code>macOSNotif()</code><br/><br/>
 
     <button style="font-size:1em;" onclick="macOSNotif({btn2Text:null})">
-        Trigger Notification (One button)</button>
+        Trigger Notification (One button)
+    </button>
     <br/><code>macOSNotif({btn2Text:null})</code><br/><br/>
 
     <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#'})">
-        Trigger Notification (Main body clickable)</button>
+        Trigger Notification (Main body clickable)
+    </button>
     <br/><code>macOSNotif({mainLink:'#'})</code><br/><br/>
 
     <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#', btn1Text:null})">
-        Trigger Notification (No buttons)</button>
+        Trigger Notification (No buttons)
+    </button>
     <br/><code>macOSNotif({mainLink:'#', btn1Text:null})</code><br/><br/>
 </div>
 
