implement icons (issue #1 and issue #2)

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         Trigger Notification (No buttons)
     </button>
     <br/><code>macOSNotif({mainLink:'#', btn1Text:null})</code><br/><br/>
+
+    <button style="font-size:1em;" onclick="macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})">
+        Trigger Notification (Image)
+    </button>
+    <br/><code>macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})</code><br/><br/>
 </div>
 
 <script src="./macOSNotif.js"></script>
