--- a/res/macOSNotif.html
+++ b/res/macOSNotif.html
@@ -18,6 +18,9 @@
 
 <div id="macOSNotifJS_Outer" class="macOSNotif_Outer">
     <div id="macOSNotifJS_Container" class="macOSNotif_Container">
+        <a onclick="macOSNotifJS_ButtonImg(this)" id="macOSNotifJS_Img" class="macOSNotif_Img">
+            <img id="macOSNotifJS_Image" class="macOSNotif_Image"/>
+        </a>
         <a onclick="macOSNotifJS_ButtonMain(this)" id="macOSNotifJS_Text" class="macOSNotif_Text">
             <h3 class="macOSNotif_Title" id="macOSNotifJS_Title"></h3>
             <h4 class="macOSNotif_Title macOSNotif_Subtitle" id="macOSNotifJS_Subtitle"></h4>
