--- a/index.html
+++ b/index.html
@@ -17,44 +17,69 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en" style="margin:0;padding:0;background:#666;color:#ddd;text-align:center">
+<html lang="en" style="margin:0;padding:0;background:#666;color:#ddd">
 <head>
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
     <link href="res/macOSNotif.fonts.css" rel="stylesheet" type="text/css"/>
 </head>
-<body class="sf-ui-display" style="margin:0;padding:0;background:transparent">
+<body class="sf-ui-display" style="margin:0;padding:2em;background:transparent">
 
-<h1 style="margin-top:4em;margin-bottom:2em">
-    A simple Javascript plugin to create simulated macOS notifications on your website.
+<h1>
+    macOSNotifJS
+    <br/>
+    <small>A simple Javascript plugin to create simulated macOS notifications on your website.</small>
 </h1>
 
-<div style="font-size:2em;">
-    <button style="font-size:1em;" onclick="macOSNotif()">
-        Trigger Notification (Two buttons)
-    </button>
-    <br/><code>macOSNotif()</code><br/><br/>
+<h3>Usage:</h3>
+<p>
+    To get started call the function <code>macOSNotif</code>.
+    <br/>To make proper use of the fucntion, you can supply an object of options as listed below.
+</p>
+<pre>
+options = {
+    delay: .5,                              // Delay before display (in seconds)
+    autoDismiss: 0,                         // Delay till automatic dismiss (0 = Never, in seconds)
+    interactDismiss: true,                  // Toggle swipe/drag to dismiss
+    zIndex: 5000,                           // The css z-index value of the notification
+    imageSrc: null,                         // Link of the icon to display (null to hide icon)
+    imageName: "",                          // Alt/Title text of the icon
+    imageLink: null,                        // Link for icon click (null for no link, '#' for dismiss)
+    title: "Please Define title",           // Main Notif Title
+    subtitle: "Please Define subtitle",     // Main Notif Sub Title
+    mainLink: null,                         // Link for the main text body (null for no link, '#' for dismiss)
+    btn1Text: "Go",                         // Text for Button 1 (null to hide all buttons)
+    btn1Link: null,                         // Link for Button 1 (null or '#' for dismiss only)
+    btn2Text: "Dismiss",                    // Text for Button 2 (null to hide second button)
+    btn2Link: null,                         // Link for Button 2 (null or '#' for dismiss only)
+}
+</pre>
 
-    <button style="font-size:1em;" onclick="macOSNotif({btn2Text:null})">
-        Trigger Notification (One button)
-    </button>
-    <br/><code>macOSNotif({btn2Text:null})</code><br/><br/>
+<h3>Demos:</h3>
+<button style="font-size:1.5em" onclick="macOSNotif()">
+    Trigger Notification (Two buttons)
+</button>
+<p>Basic call: <code>macOSNotif()</code></p><br/>
 
-    <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#'})">
-        Trigger Notification (Main body clickable)
-    </button>
-    <br/><code>macOSNotif({mainLink:'#'})</code><br/><br/>
+<button style="font-size:1.5em" onclick="macOSNotif({btn2Text:null})">
+    Trigger Notification (One button)
+</button>
+<p>Basic call: <code>macOSNotif({btn2Text:null})</code></p><br/>
 
-    <button style="font-size:1em;" onclick="macOSNotif({mainLink:'#', btn1Text:null})">
-        Trigger Notification (No buttons)
-    </button>
-    <br/><code>macOSNotif({mainLink:'#', btn1Text:null})</code><br/><br/>
+<button style="font-size:1.5em" onclick="macOSNotif({mainLink:'#'})">
+    Trigger Notification (Main body clickable)
+</button>
+<p>Basic call: <code>macOSNotif({mainLink:'#'})</code></p><br/>
 
-    <button style="font-size:1em;" onclick="macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})">
-        Trigger Notification (Image)
-    </button>
-    <br/><code>macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})</code><br/><br/>
-</div>
+<button style="font-size:1.5em" onclick="macOSNotif({mainLink:'#', btn1Text:null})">
+    Trigger Notification (No buttons)
+</button>
+<p>Basic call: <code>macOSNotif({mainLink:'#', btn1Text:null})</code></p><br/>
+
+<button style="font-size:1.5em" onclick="macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})">
+    Trigger Notification (Image)
+</button>
+<p>Basic call: <code>macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})</code></p><br/>
 
 <script src="./macOSNotif.js"></script>
 <script>macOSNotif()</script>
