--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ options = {
     delay: .5,                              // Delay before display (in seconds)
     autoDismiss: 0,                         // Delay till automatic dismiss (0 = Never, in seconds)
     interactDismiss: true,                  // Toggle swipe/drag to dismiss
+    sounds: false,                          // Play sounds for notification
     zIndex: 5000,                           // The css z-index value of the notification
     imageSrc: null,                         // Link of the icon to display (null to hide icon)
     imageName: "",                          // Alt/Title text of the icon
@@ -80,6 +81,11 @@ options = {
     Trigger Notification (Image)
 </button>
 <p>Basic call: <code>macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})</code></p><br/>
+
+<button style="font-size:1.5em" onclick="macOSNotif({sounds:true})">
+    Trigger Notification (Sounds)
+</button>
+<p>Basic call: <code>macOSNotif({sounds:true})</code></p><br/>
 
 <script src="./macOSNotif.js"></script>
 <script>macOSNotif()</script>
