minify some stuff

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <head>
     <meta charset="UTF-8">
     <title>macOSNotifJS</title>
-    <link href="res/macOSNotif.fonts.css" rel="stylesheet" type="text/css"/>
+    <link href="plugin/res/macOSNotif.fonts.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="sf-ui-display" style="margin:0;padding:2em;background:transparent">
 
@@ -87,7 +87,7 @@ options = {
 </button>
 <p>Basic call: <code>macOSNotif({sounds:true})</code></p><br/>
 
-<script src="./macOSNotif.js"></script>
+<script src="plugin/macOSNotif.js"></script>
 <script>macOSNotif()</script>
 
 </body>
