add fork me banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <title>macOSNotifJS</title>
     <link href="plugin/res/macOSNotif.fonts.min.css" rel="stylesheet" type="text/css"/>
 </head>
-<body class="sf-ui-display" style="margin:0;padding:2em;background:transparent">
+<body class="sf-ui-display" style="margin:0;padding:3em 5em;background:transparent">
+<a href="https://github.com/MattIPv4/macOSNotifJS">
+    <img style="position:absolute;top:0;left:0;border:0" alt="Fork me on GitHub"
+         src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"/>
+</a>
 
 <h1>
     macOSNotifJS
@@ -88,7 +92,7 @@ options = {
 <p>Basic call: <code>macOSNotif({sounds:true})</code></p><br/>
 
 <script src="plugin/macOSNotif.js"></script>
-<script>macOSNotif()</script>
+<script>macOSNotif();</script>
 
 </body>
 </html>
