--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             color: rgb(255, 59, 48);
         }
 
+        pre {
+            display: inline-block;
+        }
+
         button {
             background: rgb(0, 122, 255);
             border: none;
@@ -76,7 +80,8 @@
             color: #fff;
             font-size: 1.2em;
             line-height: 1.5em;
-            margin-bottom: 0.5em;
+            vertical-align: top;
+            margin-top: 0.8em;
         }
 
         button:hover {
@@ -87,19 +92,58 @@
             background: rgb(0, 99, 204);
         }
 
-        button + code {
-            margin-left: 0.5em;
+        button + pre {
+            margin-left: 0.8em;
+        }
+
+        hr {
+            border: none;
+            border-top: 1px solid #ddd;
+            margin: 0.8rem 1.6rem;
         }
     </style>
 
-
+    
     <link href="dist/macOSNotif.min.css" rel="stylesheet"/>
-
+    
 </head>
 <body class="sf-ui-display">
-<a href="https://github.com/MattIPv4/macOSNotifJS">
-    <img style="position:absolute;top:0;left:0;border:0" alt="Fork me on GitHub"
-         src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"/>
+
+<a href="https://github.com/MattIPv4/macOSNotifJS" class="github-corner" aria-label="View source on GitHub">
+    <svg width="80" height="80" viewBox="0 0 250 250"
+         style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);"
+         aria-hidden="true">
+        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+        <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+              fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+        <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+              fill="currentColor" class="octo-body"></path>
+    </svg>
+    <style>.github-corner:hover .octo-arm {
+        animation: octocat-wave 560ms ease-in-out
+    }
+
+    @keyframes octocat-wave {
+        0%, 100% {
+            transform: rotate(0)
+        }
+        20%, 60% {
+            transform: rotate(-25deg)
+        }
+        40%, 80% {
+            transform: rotate(10deg)
+        }
+    }
+
+    @media (max-width: 500px) {
+        .github-corner:hover .octo-arm {
+            animation: none
+        }
+
+        .github-corner .octo-arm {
+            animation: octocat-wave 560ms ease-in-out
+        }
+    }</style>
 </a>
 
 <h1>
@@ -111,66 +155,128 @@
     </small>
 </h1>
 
+<h3>Installation:</h3>
+<p>To use the plugin, copy the <code>dist</code> folder from the <a href="https://github.com/MattIPv4/macOSNotifJS">
+    macOSNotifJS GitHub repository</a> to your website.</p>
+
+<p>To then have the plugin available on a page, in your head tag have the following to load the notification
+    styling:</p>
+<pre><code>&lt;link href="dist/macOSNotif.min.css" rel="stylesheet"/&gt;</code></pre>
+
+<p>At the bottom of your body, you then need to have the following to load the notification script:</p>
+<pre><code>&lt;script src="dist/macOSNotif.min.js"&gt;&lt;/script&gt;</code></pre>
+
 <h3>Usage:</h3>
-<p>
-    To get started call the function <code>macOSNotif</code>.
-    <br/>To make proper use of the fucntion, you can supply an object of options as listed below.
-</p>
+<p>To get started, simply call the function <code>macOSNotif</code>.
+    <br/>To customise your notification, you can supply an object containing any of the options listed below:</p>
 <pre>
 options = {
-    delay: .5,                              // Delay before display (in seconds)
+    delay: 0.5,                             // Delay before display (in seconds)
     autoDismiss: 0,                         // Delay till automatic dismiss (0 = Never, in seconds)
     interactDismiss: true,                  // Toggle swipe/drag to dismiss
+
     sounds: false,                          // Play sounds for notification
-    zIndex: 5000,                           // The css z-index value of the notification
+    zIndex: 5000,                           // CSS z-index value of the notification (will be adjusted for stacked notifications)
+
     imageSrc: null,                         // Link of the icon to display (null to hide icon)
     imageName: "",                          // Alt/Title text of the icon
     imageLink: null,                        // Link for icon click (null for no link, '#' for dismiss)
+    imageLinkNewTab: false,                 // Open Image Link in New Tab (ignored if link is set to dismiss)
+
     title: "macOSNotifJS",                  // Main Notif Title
     subtitle: "Default notification text",  // Main Notif Sub Title
+
     mainLink: null,                         // Link for the main text body (null for no link, '#' for dismiss)
+    mainLinkNewTab: false,                  // Open Main Link in New Tab (ignored if link is set to dismiss)
+
     btn1Text: "Close",                      // Text for Button 1 (null to hide all buttons)
     btn1Link: null,                         // Link for Button 1 (null or '#' for dismiss only)
+    btn1NewTab: false,                      // Open Button 1 Link in New Tab (ignored if link is set to dismiss)
+
     btn2Text: "Go",                         // Text for Button 2 (null to hide second button)
     btn2Link: null,                         // Link for Button 2 (null or '#' for dismiss only)
+    btn2NewTab: false,                      // Open Button 2 Link in New Tab (ignored if link is set to dismiss)
 }
 </pre>
 
-
-<script src="dist/macOSNotif.min.js"></script>
-
-
-<h3>Demos:</h3>
-<button data-demo-load onclick="macOSNotif({subtitle:'Dual button notification'})">
-    Dual button notification
-</button>
-<code>macOSNotif()</code><br/>
-
-<button data-demo-load onclick="macOSNotif({subtitle:'Single button notification', btn2Text:null})">
-    Single button notification
-</button>
-<code>macOSNotif({btn2Text:null})</code><br/>
-
-<button data-demo-load onclick="macOSNotif({subtitle:'Main body link notification', mainLink:'#'})">
-    Main body link notification
-</button>
-<code>macOSNotif({mainLink:'#'})</code><br/>
-
-<button data-demo-load onclick="macOSNotif({subtitle:'No button notification', mainLink:'#', btn1Text:null})">
-    No button notification
-</button>
-<code>macOSNotif({mainLink:'#', btn1Text:null})</code><br/>
+<h3>Example Usage:</h3>
 
 <button data-demo-load
-        onclick="macOSNotif({subtitle:'Image (icon) notification', imageSrc: 'https://mattcowley.co.uk/me.png'})">
-    Image (icon) notification
+        onclick="macOSNotif({title:'Dual button notification', subtitle:'Two buttons; dismiss and a link (opens in a new tab)', btn1Text:'Close', btn1Link:null, btn2Text:'Author', btn2Link:'https://mattcowley.co.uk/', btn2NewTab:true})">
+    Dual button notification
 </button>
-<code>macOSNotif({imageSrc: 'https://mattcowley.co.uk/me.png'})</code><br/>
+<pre><code>macOSNotif({
+    title:'Dual button notification',
+    subtitle:'Two buttons; dismiss and a link (opens in a new tab)',
+    btn1Text:'Close',
+    btn1Link:null,
+    btn2Link:'Author',
+    btn2Link:'https://mattcowley.co.uk/',
+    btn2NewTab:true
+})</code></pre>
 
-<button onclick="macOSNotif({subtitle:'Sound (alert) notification', sounds:true})">
+<hr/>
+
+<button data-demo-load
+        onclick="macOSNotif({title:'Single button notification', subtitle:'A single button to dismiss the notification', btn2Text:null})">
+    Single button notification
+</button>
+<pre><code>macOSNotif({
+    title:'Single button notification',
+    subtitle:'A single button to dismiss the notification',
+    btn2Text:null
+})</code></pre>
+
+<hr/>
+
+<button data-demo-load
+        onclick="macOSNotif({title:'Main body link notification', subtitle:'The main notification body is a link (opens in a new tab)', mainLink:'https://mattcowley.co.uk/', mainLinkNewTab:true})">
+    Main body link notification
+</button>
+<pre><code>macOSNotif({
+    title:'Main body link notification',
+    subtitle:'The main notification body is a link (opens in a new tab)',
+    mainLink:'https://mattcowley.co.uk/',
+    mainLinkNewTab:true
+})</code></pre>
+
+<hr/>
+
+<button data-demo-load
+        onclick="macOSNotif({title:'No button notification', subtitle:'The main body link dismisses the notification', mainLink:'#', btn1Text:null})">
+    No button notification
+</button>
+<pre><code>macOSNotif({
+    title:'No button notification',
+    subtitle:'The main body link dismisses the notification',
+    mainLink:'#',
+    btn1Text:null
+})</code></pre>
+
+<hr/>
+
+<button data-demo-load
+        onclick="macOSNotif({title:'Image (icon) notification with link', subtitle:'Has an icon which also has a link', imageSrc:'https://mattcowley.co.uk/me.png', imageLink:'https://mattcowley.co.uk/', imageLinkNewTab:true})">
+    Image (icon) notification with link
+</button>
+<pre><code>macOSNotif({
+    title:'Image (icon) notification with link',
+    subtitle:'Has an icon which also has a link',
+    imageSrc:'https://mattcowley.co.uk/me.png',
+    imageLink:'https://mattcowley.co.uk/',
+    imageLinkNewTab:true
+})</code></pre>
+
+<hr/>
+
+<button onclick="macOSNotif({title:'Sound (alert) notification', subtitle:'Requires user interaction first on some browsers', sounds:true})">
     Sound (alert) notification
 </button>
-<code>macOSNotif({sounds:true})</code><br/>
+<pre><code>macOSNotif({
+    title:'Sound (alert) notification',
+    subtitle:'Requires user interaction first on some browsers',
+    sounds:true
+})</code></pre>
 
 <h2>
     macOSNotifJS
@@ -178,11 +284,17 @@ options = {
     <small>
         A simple Javascript plugin to create simulated macOS notifications on your website.
         <br/>macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
+        <br/>
+        <br/><i>macOSNotifJS - v0.0.3 - 2018-11-10</i>
     </small>
 </h2>
 
+
+<script src="dist/macOSNotif.min.js"></script>
+
+
 <script>
-    if(window.location.hostname != "macosnotif.js.org") window.location.replace("https://macosnotif.js.org");
+    //if(window.location.hostname != "macosnotif.js.org") window.location.replace("https://macosnotif.js.org");
 
     const buttons = document.querySelectorAll("button[data-demo-load]");
     const delay = 750;
@@ -204,10 +316,14 @@ options = {
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113826252-5"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
 
-    gtag('config', 'UA-113826252-5');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag("js", new Date());
+
+    gtag("config", "UA-113826252-5");
 </script>
 
 </body>
