add demo site redirect

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ options = {
 
 
 <script>
-    //if(window.location.hostname != "macosnotif.js.org") window.location.replace("https://macosnotif.js.org");
+    if(window.location.hostname === "macosnotifjs.mattcowley.co.uk") window.location.replace("https://macosnotif.js.org");
 
     const buttons = document.querySelectorAll("button[data-demo-load]");
     const delay = 750;
