--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ options = {
     interactDismiss: true,                  // Toggle swipe/drag to dismiss
 
     sounds: false,                          // Play sounds for notification
+    dark: false,                            // Use dark mode style for notification
     zIndex: 5000,                           // CSS z-index value of the notification (will be adjusted for stacked notifications)
 
     imageSrc: null,                         // Link of the icon to display (null to hide icon)
@@ -338,6 +339,18 @@ options = {
 
 <hr/>
 
+<button data-demo-load
+        onclick="macOSNotif({title:'Dark mode notification', subtitle:'Emulates the macOS dark mode styling', dark:true})">
+    Dark mode notification
+</button>
+<pre><code>macOSNotif({
+    title:'Dark mode notification',
+    subtitle:'Emulates the macOS dark mode styling',
+    dark:true
+})</code></pre>
+
+<hr/>
+
 <button onclick="macOSNotif({title:'Sound (alert) notification', subtitle:'Requires user interaction first on some browsers', sounds:true})">
     Sound (alert) notification
 </button>
@@ -354,7 +367,7 @@ options = {
         A simple Javascript plugin to create simulated macOS notifications on your website.
         <br/>macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
         <br/>
-        <br/><i>macOSNotifJS - v0.0.3 - 2018-11-10</i>
+        <br/><i>macOSNotifJS - v0.0.4-dev - 2018-11-11</i>
     </small>
 </h2>
 
