new stacking method

--- a/src/html/macOSNotif.html
+++ b/src/html/macOSNotif.html
@@ -19,7 +19,7 @@
 <div id="macOSNotifJS_Outer" class="macOSNotif_Outer">
     <div id="macOSNotifJS_Container" class="macOSNotif_Container">
         <a onclick="macOSNotifJS_ButtonImg(this)" id="macOSNotifJS_Img" class="macOSNotif_Img">
-            <img id="macOSNotifJS_Image" class="macOSNotif_Image"/>
+            <img id="macOSNotifJS_Image" class="macOSNotif_Image" src=""/>
         </a>
         <a onclick="macOSNotifJS_ButtonMain(this)" id="macOSNotifJS_Text" class="macOSNotif_Text">
             <h3 class="macOSNotif_Title" id="macOSNotifJS_Title"></h3>
