--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ options = {
         A simple Javascript plugin to create simulated macOS notifications on your website.
         <br/>macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
         <br/>
-        <br/><i>macOSNotifJS - v0.0.4-dev - 2018-11-11</i>
+        <br/><i>macOSNotifJS - v0.0.4 - 2018-11-12</i>
     </small>
 </h2>
 
