--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <br/>
     <small>
         <a href="https://macosnotif.js.org/">
-            <img src="https://img.shields.io/badge/package-v0.0.5--beta2-007aff.svg?style=flat-square"
+            <img src="https://img.shields.io/badge/package-v0.0.5-007aff.svg?style=flat-square"
                  alt="Package Version">
         </a>
         <a href="https://github.com/MattIPv4/macOSNotifJS/tree/master/LICENSE">
@@ -556,7 +556,7 @@ options = {
     <small>
         macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
         <br/>
-        <br/><i>macOSNotifJS - v0.0.5-beta2 - 2019-05-21</i>
+        <br/><i>macOSNotifJS - v0.0.5 - 2019-05-21</i>
     </small>
 </h2>
 
